# backend/controllers/userController.js
@@ -2,6 +2,8 @@ const express = require('express');
 const User = require('../models/user');
 const authMiddleware = require('../middlewares/auth');
 const util = require('../util/util');
+const Store = require('../models/store');
+const Item = require('../models/item');
 
 const authRouter = express.Router();
 const openRouter = express.Router();
@@ -54,5 +56,35 @@ authRouter.put('/', async (req, res) => {
     return res.status(400).send({ error: `Updated failed: ${e}` });
   }
 });
+
+
+authRouter.post('/cart/', async (req, res) => {
+  const { idItem, idStore, amount } = req.body;
+  const user = await User.findById(req.idLogged);
+  const store = await Store.findById(idStore);
+
+  try {
+    if (!store) {
+      return res.status(404).send({ error: 'Store not Found' });
+    }
+
+
+    store.storage.forEach((itemStore) => {
+      if (idItem == itemStore._id) {
+        const itemCart = { id: idItem, idStore, amount };
+        user.cart.push(itemCart);
+        user.save();
+      }
+    });
+
+    // user.cart.put(item);
+    //
+    // user.save();
+    return res.status(404).send(user);
+  } catch (e) {
+    return res.status(400).send({ error: `Registration failed ${e}` });
+  }
+});
+
 
 module.exports = app => app.use('/users', openRouter, authRouter);
